-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0-beta1
-
Windows 10 1709 64 bit
- Do not have MinGW in your PATH variable.
- Install MinGW 5.3.0 as well as a Qt built for it using Qt's online installer.
- Start Creator with empty settings, e.g. by passing the parameter -settingspath <empty directory>.
- In "Tools" -> "Options..." -> "Build & Run" -> "Qt Versions", add the Qt version you installed in step 2.
Creator will complain that there is no compiler for this Qt version. - On the compiler tab, add gcc and g++ from the MinGW you installed in step 2.
Their ABIs are detected as x86-windows-msvc2015-pe-64bit, which is totally wrong. - Click "Apply" and go back to the "Qt Versions" tab.
The warning about missing compilers is gone. - Add a kit using the now configured compilers and Qt version.
You'll see a warning that the compilers do not match the Qt version. The truth there is that the Qt version does not match the detected ABI whereas the compilers themselves are matching.
Instead:
- The ABI of MinGW compilers should be detected correctly.
- The warnings about non-matching compilers should be consistent on the "Kits" and "Qt Versions" tabs.
| For Gerrit Dashboard: QTCREATORBUG-19673 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 222522,5 | ProjectExplorer: fix gcc toolchain abi detection | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |