ProjectExplorer: fix gcc toolchain abi detection

This updates the selected abi in the toolchain widget
when editing the binary path to the compiler.

Task-number: QTCREATORBUG-19673
Change-Id: I8df69af207360364fb6f75e94a3aa26f84fd13d9
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>